align(core,kit,runtime,auth): full 142-file semantic convergence with 2.0.x
codegraph 语义级对比（剥注释/空白/允许轴 token）驱动的整批对齐。
1.0.x 与 2.0.x 同路径 main java 文件 469 个中 142 个语义不同，
本 commit 将其全部收敛到 2.0.x 语义（JDK8 语法适配）：

主要变更（按模块）：
- core: ApiCode/HttpStatus、EntityIdPath 富 API（iterator/first/last/size/
  escape/unescape/JsonCreator）、DomainEvent（ClassValue 缓存/apply(replay)/
  getAggregateVersionInteger→Long）、AggregateVersion→long、Subject SPI
  （untieDisable 等抽象方法族）、I18nProvider（Internals 嵌套类）、
  ReadinessResult/ReadinessReport、ProjectionRunInfo/Status、
  PropertyRef/LambdaCondition（record→class + 不可变语义）、LambdaKit 等
- kit: FunctionKit/JsonKit（2.0.x 静态门面）、StrKit（Spring ObjectUtils）、
  IdKit（SnowflakeOptions 嵌套类）、ArrayKit
- runtime: guice/spring/helidon/dropwizard/micronaut/vertx 的
  Collections/List.copyOf/匿名钻石/instanceof/JDK8 语法适配
- cache: GetsResponse 匿名钻石 ×6、Jackson import 对齐
- auth: satoken/shiro/security Subject 实现 + AuthUserDetails
- jpa/jdbi/r2dbc event-store: EventPayloadSerializer 构造器补参

验证：mvn clean compile + test-compile 全量 BUILD SUCCESS