@@ -1,17 +1,3 @@
-/*
- * Copyright (c) 2024-2026 ddd4j project. All rights reserved.
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *     http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
 package io.ddd4j.runtime.testkit;
 
 import io.ddd4j.cache.subject.InMemorySubject;
@@ -27,7 +13,6 @@ import io.ddd4j.core.health.ReadinessContributor;
 import io.ddd4j.core.health.ReadinessResult;
 import io.ddd4j.core.subject.SubjectProvider;
 import java.util.Collections;
-import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 
@@ -64,15 +49,14 @@ public final class RuntimeFixtures {
     }
 
     public List<ReadinessContributor> readinessContributors() {
-        return Collections.singletonList(() -> ReadinessResult.ready("runtime-fixture"));
+        return List.of(() -> ReadinessResult.ready("runtime-fixture"));
     }
 
     public Map<String, Class<?>> services() {
-        Map<String, Class<?>> map = new LinkedHashMap<>();
-        map.put(SpiKeys.DOMAIN_EVENT_PUBLISHER, DomainEventPublisher.class);
-        map.put(SpiKeys.SUBJECT_PROVIDER, SubjectProvider.class);
-        map.put(SpiKeys.I18N_PROVIDER, I18nProvider.class);
-        map.put(SpiKeys.COMMAND_BUS, CommandBus.class);
-        return Collections.unmodifiableMap(map);
+        return Map.of(
+                SpiKeys.DOMAIN_EVENT_PUBLISHER, DomainEventPublisher.class,
+                SpiKeys.SUBJECT_PROVIDER, SubjectProvider.class,
+                SpiKeys.I18N_PROVIDER, I18nProvider.class,
+                SpiKeys.COMMAND_BUS, CommandBus.class);
     }
 }
